--- a/templates/appindex.html
+++ b/templates/appindex.html
@@ -12,17 +12,13 @@
 <body>
     <!-- headers -->
     <header class="header">
-        <img src="{{ url_for('static', filename='npgclogo2.png') }}" class="logo">
+        <img src="{{ url_for('static', filename='npgclogo.jpeg') }}" class="logo">
         <div class="title">NPGC Helpdesk</div>
         <button id="feedbackBtn" class="feedback-btn">Feedback</button>
     </header>
 
     <!-- Chat area -->
     <div class="chat-container" id="chatContainer"></div>
-
-    <!-- suggest questions -->
-    <div id="suggestions" class="suggestions"></div>
-
 
     <!-- Input -->
     <div class="input-wrapper" id="inputWrapper">
