--- a/static/appstyle.css
+++ b/static/appstyle.css
@@ -7,8 +7,7 @@
 
 body {
     height: 100vh;
-    background: #CBDDE9;
-    /* Cloudy Sky */
+    background: white;
 }
 
 /* Header */
@@ -18,8 +17,7 @@ body {
     align-items: center;
     gap: 12px;
     padding: 0 20px;
-    border-bottom: 1px solid #54748b;
-    background: #93b3c7;
+    border-bottom: 1px solid #eaeaea;
 }
 
 .logo {
@@ -29,13 +27,11 @@ body {
 .title {
     font-size: 18px;
     font-weight: 600;
-    color: #1f3b4d;
 }
 
 .feedback-btn {
     margin-left: auto;
-    background: #2872A1;
-    /* Ocean Blue */
+    background: #51afd4;
     color: white;
     border: none;
     padding: 6px 14px;
@@ -50,15 +46,14 @@ body {
     gap: 6px;
     padding: 10px 14px;
     border-radius: 14px;
-    background: #e8f2f8;
-    /* soft cloudy */
+    background: #e6e6e6;
     width: fit-content;
 }
 
 .dot {
     width: 6px;
     height: 6px;
-    background: #2872A1;
+    background: #555;
     border-radius: 50%;
     animation: blink 1.4s infinite both;
 }
@@ -112,43 +107,14 @@ body {
 
 .user {
     align-self: flex-end;
-    background: #2872A1;
-    /* Ocean Blue */
+    background: #51afd4;
     color: white;
 }
 
 .bot {
     align-self: flex-start;
-    background: #ffffff;
-    /* Cloudy Sky tint */
-    color: #1f3b4d;
-}
-
-/* suggest question */
-.suggestions {
-    position: fixed;
-    bottom: 90px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 90%;
-    max-width: 640px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-}
-
-.suggestion {
-    background: #a4c2d4;
-    padding: 6px 10px;
-    border-radius: 16px;
-    font-size: 13px;
-    cursor: pointer;
-    border: 1px solid #b6d0e2;
-}
-
-.suggestion:hover {
-    background: #2872A1;
-    color: white;
+    background: #e6e6e6;
+    color: black;
 }
 
 /* Input box */
@@ -162,9 +128,9 @@ body {
     display: flex;
     align-items: center;
     padding: 8px 12px;
-    border: 2px solid #91b0c5;
+    border: 3px solid #e0e0e0;
     border-radius: 999px;
-    background: #ffffff;
+    background: #fff;
 }
 
 .input-wrapper input {
@@ -175,8 +141,8 @@ body {
 }
 
 .send-btn {
-    background: #2872A1;
-    color: white;
+    background: #51afd4;
+    color: rgb(0, 0, 0);
     border: none;
     width: 40px;
     height: 36px;
@@ -194,7 +160,7 @@ body {
 }
 
 .modal-content {
-    background: #CBDDE9;
+    background: white;
     width: 90%;
     max-width: 400px;
     margin: 120px auto;
@@ -215,11 +181,10 @@ body {
     width: 100%;
     height: 100px;
     margin: 10px 0;
-    border: 1px solid #b6d0e2;
 }
 
 #submitFeedback {
-    background: #2872A1;
+    background: #51afd4;
     color: white;
     border: none;
     padding: 8px 14px;
