--- a/static/appstyle.css
+++ b/static/appstyle.css
@@ -6,13 +6,16 @@
 }
 
 body {
-    height: 100vh;
+    min-height: 100dvh;
     background: #CBDDE9;
-    /* Cloudy Sky */
 }
 
 /* Header */
 .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 64px;
     display: flex;
     align-items: center;
@@ -20,6 +23,7 @@ body {
     padding: 0 20px;
     border-bottom: 1px solid #54748b;
     background: #93b3c7;
+    z-index: 1000;
 }
 
 .logo {
